// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar snapshot should match snapshot 1`] = `
<Avatar
  title="Cisco Webex"
>
  <div
    aria-hidden="false"
    aria-label=""
    className="md-avatar-wrapper"
    data-color="default"
    data-size={24}
    role="img"
  >
    <Initials
      className="md-avatar-wrapper-children"
      initials="CW"
      type="person"
    >
      <span
        aria-hidden="true"
        className="md-avatar-wrapper-children"
      >
        CW
      </span>
    </Initials>
  </div>
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with aria-label 1`] = `
<Avatar
  aria-label="ariaLabel"
>
  <div
    aria-hidden="false"
    aria-label="ariaLabel"
    className="md-avatar-wrapper"
    data-color="default"
    data-size={24}
    role="img"
  />
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with buttonClassName 1`] = `
<Avatar
  buttonClassName="button classname test"
>
  <div
    aria-hidden="false"
    aria-label=""
    className="md-avatar-wrapper"
    data-color="default"
    data-size={24}
    role="img"
  />
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with failureBadge 1`] = `
<Avatar
  failureBadge={true}
  title="Cisco Webex"
>
  <div
    aria-hidden="false"
    aria-label=""
    className="md-avatar-wrapper"
    data-color="default"
    data-size={24}
    role="img"
  >
    <Initials
      className="md-avatar-wrapper-children"
      initials="CW"
      type="person"
    >
      <span
        aria-hidden="true"
        className="md-avatar-wrapper-children"
      >
        CW
      </span>
    </Initials>
    <Presence
      isCircularWrapper={true}
      presenceColor="var(--mds-color-theme-indicator-attention)"
      presenceIcon="warning"
      size={24}
    >
      <div
        className="md-avatar-presence-icon-wrapper"
        data-shape={true}
      >
        <Icon
          fillColor="var(--mds-color-theme-indicator-attention)"
          name="warning"
          scale={14}
          strokeColor="none"
          weight="filled"
        >
          <div
            aria-hidden="true"
            className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
            role="img"
          >
            <svg
              aria-hidden="true"
              className=""
              data-autoscale={false}
              data-scale={14}
              data-test="warning"
              height="100%"
              style={
                Object {
                  "fill": "var(--mds-color-theme-indicator-attention)",
                  "stroke": "none",
                }
              }
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
    </Presence>
  </div>
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with icon 1`] = `
<Avatar
  icon="check"
>
  <div
    aria-hidden="false"
    aria-label=""
    className="md-avatar-wrapper"
    data-color="default"
    data-size={24}
    role="img"
  >
    <Icon
      className="md-avatar-wrapper-children md-avatar-icon-wrapper"
      name="check"
      scale={16}
      weight="bold"
    >
      <div
        aria-hidden="true"
        className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-avatar-wrapper-children md-avatar-icon-wrapper md-icon-no-shrink"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-autoscale={false}
          data-scale={16}
          data-test="check"
          fill="currentColor"
          height="100%"
          style={Object {}}
          viewBox="0, 0, 32, 32"
          width="100%"
        />
      </div>
    </Icon>
  </div>
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with iconOnHover 1`] = `
<Avatar
  iconOnHover="check"
>
  <div
    aria-hidden="false"
    aria-label=""
    className="md-avatar-wrapper"
    data-color="default"
    data-size={24}
    role="img"
  >
    <div
      className="md-avatar-wrapper-children md-avatar-icon-on-hover-wrapper"
    >
      <Icon
        className="md-avatar-wrapper-children md-avatar-icon-wrapper"
        name="check"
        scale={16}
        weight="bold"
      >
        <div
          aria-hidden="true"
          className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-avatar-wrapper-children md-avatar-icon-wrapper md-icon-no-shrink"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-autoscale={false}
            data-scale={16}
            data-test="check"
            fill="currentColor"
            height="100%"
            style={Object {}}
            viewBox="0, 0, 32, 32"
            width="100%"
          />
        </div>
      </Icon>
    </div>
  </div>
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with initials 1`] = `
<Avatar
  initials="CW"
>
  <div
    aria-hidden="false"
    aria-label=""
    className="md-avatar-wrapper"
    data-color="default"
    data-size={24}
    role="img"
  >
    <Initials
      className="md-avatar-wrapper-children"
      initials="CW"
      type="person"
    >
      <span
        aria-hidden="true"
        className="md-avatar-wrapper-children"
      >
        CW
      </span>
    </Initials>
  </div>
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with isTyping and typingLabel 1`] = `
<Avatar
  isTyping={true}
  title="Cisco Webex"
  typingLabel="isTyping"
>
  <div
    aria-hidden="false"
    aria-label="isTyping"
    className="md-avatar-wrapper"
    data-color="default"
    data-size={24}
    role="img"
  >
    <Initials
      className="md-avatar-wrapper-children"
      initials="CW"
      type="person"
    >
      <span
        aria-hidden="true"
        className="md-avatar-wrapper-children"
      >
        CW
      </span>
    </Initials>
    <span
      aria-hidden="true"
      className="md-avatar-wrapper-children md-avatar-animation-wrapper"
    >
      <div
        style={
          Object {
            "transform": "scale(0.4)",
          }
        }
      >
        <Loading
          small={false}
        >
          <div
            className="md-loading"
          >
            <span
              className="md-loading__icon"
            />
            <span
              className="md-loading__icon"
            />
            <span
              className="md-loading__icon"
            />
          </div>
        </Loading>
      </div>
    </span>
  </div>
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with mainLabel 1`] = `
<Avatar
  mainLabel="mainLabel"
  onPress={[MockFunction]}
>
  <ButtonSimple
    aria-label="mainLabel"
    className="md-avatar-button-wrapper"
    onPress={[MockFunction]}
    useNativeKeyDown={true}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          aria-label="mainLabel"
          className="md-avatar-button-wrapper md-button-simple-wrapper"
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <div
            aria-hidden="true"
            className="md-avatar-wrapper"
            data-color="default"
            data-size={24}
          />
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with onPress 1`] = `
<Avatar
  onPress={[Function]}
  title="Cisco Webex"
>
  <ButtonSimple
    aria-label=""
    className="md-avatar-button-wrapper"
    onPress={[Function]}
    useNativeKeyDown={true}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          aria-label=""
          className="md-avatar-button-wrapper md-button-simple-wrapper"
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <div
            aria-hidden="true"
            className="md-avatar-wrapper"
            data-color="default"
            data-size={24}
          >
            <Initials
              className="md-avatar-wrapper-children"
              initials="CW"
              type="person"
            >
              <span
                aria-hidden="true"
                className="md-avatar-wrapper-children"
              >
                CW
              </span>
            </Initials>
          </div>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with presence and presenceLabel 1`] = `
<div>
  <Avatar
    key="0"
    presence="default"
    presenceLabel="default"
    title="Cisco Webex"
  >
    <div
      aria-hidden="false"
      aria-label="default"
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      role="img"
    >
      <Initials
        className="md-avatar-wrapper-children"
        initials="CW"
        type="person"
      >
        <span
          aria-hidden="true"
          className="md-avatar-wrapper-children"
        >
          CW
        </span>
      </Initials>
    </div>
  </Avatar>
  <Avatar
    key="1"
    presence="active"
    presenceLabel="active"
    title="Cisco Webex"
  >
    <div
      aria-hidden="false"
      aria-label="active"
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      role="img"
    >
      <Initials
        className="md-avatar-wrapper-children"
        initials="CW"
        type="person"
      >
        <span
          aria-hidden="true"
          className="md-avatar-wrapper-children"
        >
          CW
        </span>
      </Initials>
      <Presence
        isCircularWrapper={true}
        presenceColor="var(--mds-color-theme-indicator-stable)"
        presenceIcon="unread"
        size={24}
      >
        <div
          className="md-avatar-presence-icon-wrapper"
          data-shape={true}
        >
          <Icon
            fillColor="var(--mds-color-theme-indicator-stable)"
            name="unread"
            scale={14}
            strokeColor="none"
            weight="filled"
          >
            <div
              aria-hidden="true"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-autoscale={false}
                data-scale={14}
                data-test="unread"
                height="100%"
                style={
                  Object {
                    "fill": "var(--mds-color-theme-indicator-stable)",
                    "stroke": "none",
                  }
                }
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </div>
      </Presence>
    </div>
  </Avatar>
  <Avatar
    key="2"
    presence="meet"
    presenceLabel="meet"
    title="Cisco Webex"
  >
    <div
      aria-hidden="false"
      aria-label="meet"
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      role="img"
    >
      <Initials
        className="md-avatar-wrapper-children"
        initials="CW"
        type="person"
      >
        <span
          aria-hidden="true"
          className="md-avatar-wrapper-children"
        >
          CW
        </span>
      </Initials>
      <Presence
        isCircularWrapper={false}
        presenceColor="var(--mds-color-theme-indicator-unstable)"
        presenceIcon="camera-presence"
        size={24}
      >
        <div
          className="md-avatar-presence-icon-wrapper"
          data-shape={false}
        >
          <Icon
            fillColor="var(--mds-color-theme-indicator-unstable)"
            name="camera-presence"
            scale={14}
            strokeColor="none"
            weight="filled"
          >
            <div
              aria-hidden="true"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-autoscale={false}
                data-scale={14}
                data-test="camera-presence"
                height="100%"
                style={
                  Object {
                    "fill": "var(--mds-color-theme-indicator-unstable)",
                    "stroke": "none",
                  }
                }
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </div>
      </Presence>
    </div>
  </Avatar>
  <Avatar
    key="3"
    presence="schedule"
    presenceLabel="schedule"
    title="Cisco Webex"
  >
    <div
      aria-hidden="false"
      aria-label="schedule"
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      role="img"
    >
      <Initials
        className="md-avatar-wrapper-children"
        initials="CW"
        type="person"
      >
        <span
          aria-hidden="true"
          className="md-avatar-wrapper-children"
        >
          CW
        </span>
      </Initials>
      <Presence
        isCircularWrapper={false}
        presenceColor="var(--mds-color-theme-indicator-unstable)"
        presenceIcon="meetings-presence"
        size={24}
      >
        <div
          className="md-avatar-presence-icon-wrapper"
          data-shape={false}
        >
          <Icon
            fillColor="var(--mds-color-theme-indicator-unstable)"
            name="meetings-presence"
            scale={14}
            strokeColor="none"
            weight="filled"
          >
            <div
              aria-hidden="true"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-autoscale={false}
                data-scale={14}
                data-test="meetings-presence"
                height="100%"
                style={
                  Object {
                    "fill": "var(--mds-color-theme-indicator-unstable)",
                    "stroke": "none",
                  }
                }
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </div>
      </Presence>
    </div>
  </Avatar>
  <Avatar
    key="4"
    presence="call"
    presenceLabel="call"
    title="Cisco Webex"
  >
    <div
      aria-hidden="false"
      aria-label="call"
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      role="img"
    >
      <Initials
        className="md-avatar-wrapper-children"
        initials="CW"
        type="person"
      >
        <span
          aria-hidden="true"
          className="md-avatar-wrapper-children"
        >
          CW
        </span>
      </Initials>
      <Presence
        isCircularWrapper={false}
        presenceColor="var(--mds-color-theme-indicator-unstable)"
        presenceIcon="handset"
        size={24}
      >
        <div
          className="md-avatar-presence-icon-wrapper"
          data-shape={false}
        >
          <Icon
            fillColor="var(--mds-color-theme-indicator-unstable)"
            name="handset"
            scale={14}
            strokeColor="none"
            weight="filled"
          >
            <div
              aria-hidden="true"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-autoscale={false}
                data-scale={14}
                data-test="handset"
                height="100%"
                style={
                  Object {
                    "fill": "var(--mds-color-theme-indicator-unstable)",
                    "stroke": "none",
                  }
                }
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </div>
      </Presence>
    </div>
  </Avatar>
  <Avatar
    key="5"
    presence="DND"
    presenceLabel="DND"
    title="Cisco Webex"
  >
    <div
      aria-hidden="false"
      aria-label="DND"
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      role="img"
    >
      <Initials
        className="md-avatar-wrapper-children"
        initials="CW"
        type="person"
      >
        <span
          aria-hidden="true"
          className="md-avatar-wrapper-children"
        >
          CW
        </span>
      </Initials>
      <Presence
        isCircularWrapper={true}
        presenceColor="var(--mds-color-theme-indicator-attention)"
        presenceIcon="dnd-presence"
        size={24}
      >
        <div
          className="md-avatar-presence-icon-wrapper"
          data-shape={true}
        >
          <Icon
            fillColor="var(--mds-color-theme-indicator-attention)"
            name="dnd-presence"
            scale={14}
            strokeColor="none"
            weight="filled"
          >
            <div
              aria-hidden="true"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-autoscale={false}
                data-scale={14}
                data-test="dnd-presence"
                height="100%"
                style={
                  Object {
                    "fill": "var(--mds-color-theme-indicator-attention)",
                    "stroke": "none",
                  }
                }
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </div>
      </Presence>
    </div>
  </Avatar>
  <Avatar
    key="6"
    presence="presenting"
    presenceLabel="presenting"
    title="Cisco Webex"
  >
    <div
      aria-hidden="false"
      aria-label="presenting"
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      role="img"
    >
      <Initials
        className="md-avatar-wrapper-children"
        initials="CW"
        type="person"
      >
        <span
          aria-hidden="true"
          className="md-avatar-wrapper-children"
        >
          CW
        </span>
      </Initials>
      <Presence
        isCircularWrapper={false}
        presenceColor="var(--mds-color-theme-indicator-attention)"
        presenceIcon="share-screen"
        size={24}
      >
        <div
          className="md-avatar-presence-icon-wrapper"
          data-shape={false}
        >
          <Icon
            fillColor="var(--mds-color-theme-indicator-attention)"
            name="share-screen"
            scale={14}
            strokeColor="none"
            weight="filled"
          >
            <div
              aria-hidden="true"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-autoscale={false}
                data-scale={14}
                data-test="share-screen"
                height="100%"
                style={
                  Object {
                    "fill": "var(--mds-color-theme-indicator-attention)",
                    "stroke": "none",
                  }
                }
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </div>
      </Presence>
    </div>
  </Avatar>
  <Avatar
    key="7"
    presence="quietHours"
    presenceLabel="quietHours"
    title="Cisco Webex"
  >
    <div
      aria-hidden="false"
      aria-label="quietHours"
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      role="img"
    >
      <Initials
        className="md-avatar-wrapper-children"
        initials="CW"
        type="person"
      >
        <span
          aria-hidden="true"
          className="md-avatar-wrapper-children"
        >
          CW
        </span>
      </Initials>
      <Presence
        isCircularWrapper={true}
        presenceColor="var(--mds-color-theme-indicator-locked)"
        presenceIcon="quiet-hours-presence"
        size={24}
      >
        <div
          className="md-avatar-presence-icon-wrapper"
          data-shape={true}
        >
          <Icon
            fillColor="var(--mds-color-theme-indicator-locked)"
            name="quiet-hours-presence"
            scale={14}
            strokeColor="none"
            weight="filled"
          >
            <div
              aria-hidden="true"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-autoscale={false}
                data-scale={14}
                data-test="quiet-hours-presence"
                height="100%"
                style={
                  Object {
                    "fill": "var(--mds-color-theme-indicator-locked)",
                    "stroke": "none",
                  }
                }
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </div>
      </Presence>
    </div>
  </Avatar>
  <Avatar
    key="8"
    presence="away"
    presenceLabel="away"
    title="Cisco Webex"
  >
    <div
      aria-hidden="false"
      aria-label="away"
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      role="img"
    >
      <Initials
        className="md-avatar-wrapper-children"
        initials="CW"
        type="person"
      >
        <span
          aria-hidden="true"
          className="md-avatar-wrapper-children"
        >
          CW
        </span>
      </Initials>
      <Presence
        isCircularWrapper={true}
        presenceColor="var(--mds-color-theme-indicator-locked)"
        presenceIcon="recents-presence"
        size={24}
      >
        <div
          className="md-avatar-presence-icon-wrapper"
          data-shape={true}
        >
          <Icon
            fillColor="var(--mds-color-theme-indicator-locked)"
            name="recents-presence"
            scale={14}
            strokeColor="none"
            weight="filled"
          >
            <div
              aria-hidden="true"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-autoscale={false}
                data-scale={14}
                data-test="recents-presence"
                height="100%"
                style={
                  Object {
                    "fill": "var(--mds-color-theme-indicator-locked)",
                    "stroke": "none",
                  }
                }
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </div>
      </Presence>
    </div>
  </Avatar>
  <Avatar
    key="9"
    presence="OOO"
    presenceLabel="OOO"
    title="Cisco Webex"
  >
    <div
      aria-hidden="false"
      aria-label="OOO"
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      role="img"
    >
      <Initials
        className="md-avatar-wrapper-children"
        initials="CW"
        type="person"
      >
        <span
          aria-hidden="true"
          className="md-avatar-wrapper-children"
        >
          CW
        </span>
      </Initials>
      <Presence
        isCircularWrapper={true}
        presenceColor="var(--mds-color-theme-indicator-locked)"
        presenceIcon="pto-presence"
        size={24}
      >
        <div
          className="md-avatar-presence-icon-wrapper"
          data-shape={true}
        >
          <Icon
            fillColor="var(--mds-color-theme-indicator-locked)"
            name="pto-presence"
            scale={14}
            strokeColor="none"
            weight="filled"
          >
            <div
              aria-hidden="true"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-autoscale={false}
                data-scale={14}
                data-test="pto-presence"
                height="100%"
                style={
                  Object {
                    "fill": "var(--mds-color-theme-indicator-locked)",
                    "stroke": "none",
                  }
                }
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </div>
      </Presence>
    </div>
  </Avatar>
  <Avatar
    key="10"
    presence="busy"
    presenceLabel="busy"
    title="Cisco Webex"
  >
    <div
      aria-hidden="false"
      aria-label="busy"
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      role="img"
    >
      <Initials
        className="md-avatar-wrapper-children"
        initials="CW"
        type="person"
      >
        <span
          aria-hidden="true"
          className="md-avatar-wrapper-children"
        >
          CW
        </span>
      </Initials>
      <Presence
        isCircularWrapper={true}
        presenceColor="var(--mds-color-theme-indicator-unstable)"
        presenceIcon="busy-presence"
        size={24}
      >
        <div
          className="md-avatar-presence-icon-wrapper"
          data-shape={true}
        >
          <Icon
            fillColor="var(--mds-color-theme-indicator-unstable)"
            name="busy-presence"
            scale={14}
            strokeColor="none"
            weight="bold"
          >
            <div
              aria-hidden="true"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-autoscale={false}
                data-scale={14}
                data-test="busy-presence"
                height="100%"
                style={
                  Object {
                    "fill": "var(--mds-color-theme-indicator-unstable)",
                    "stroke": "none",
                  }
                }
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </div>
      </Presence>
    </div>
  </Avatar>
  <Avatar
    key="11"
    presence="onMobile"
    presenceLabel="onMobile"
    title="Cisco Webex"
  >
    <div
      aria-hidden="false"
      aria-label="onMobile"
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      role="img"
    >
      <Initials
        className="md-avatar-wrapper-children"
        initials="CW"
        type="person"
      >
        <span
          aria-hidden="true"
          className="md-avatar-wrapper-children"
        >
          CW
        </span>
      </Initials>
      <Presence
        isCircularWrapper={false}
        presenceColor="var(--mds-color-theme-indicator-locked)"
        presenceIcon="phone"
        size={24}
      >
        <div
          className="md-avatar-presence-icon-wrapper"
          data-shape={false}
        >
          <Icon
            fillColor="var(--mds-color-theme-indicator-locked)"
            name="phone"
            scale={14}
            strokeColor="none"
            weight="filled"
          >
            <div
              aria-hidden="true"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-autoscale={false}
                data-scale={14}
                data-test="phone"
                height="100%"
                style={
                  Object {
                    "fill": "var(--mds-color-theme-indicator-locked)",
                    "stroke": "none",
                  }
                }
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </div>
      </Presence>
    </div>
  </Avatar>
  <Avatar
    key="12"
    presence="onDevice"
    presenceLabel="onDevice"
    title="Cisco Webex"
  >
    <div
      aria-hidden="false"
      aria-label="onDevice"
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      role="img"
    >
      <Initials
        className="md-avatar-wrapper-children"
        initials="CW"
        type="person"
      >
        <span
          aria-hidden="true"
          className="md-avatar-wrapper-children"
        >
          CW
        </span>
      </Initials>
      <Presence
        isCircularWrapper={false}
        presenceColor="var(--mds-color-theme-indicator-locked)"
        presenceIcon="generic-device-video"
        size={24}
      >
        <div
          className="md-avatar-presence-icon-wrapper"
          data-shape={false}
        >
          <Icon
            fillColor="var(--mds-color-theme-indicator-locked)"
            name="generic-device-video"
            scale={14}
            strokeColor="none"
            weight="filled"
          >
            <div
              aria-hidden="true"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-autoscale={false}
                data-scale={14}
                data-test="generic-device-video"
                height="100%"
                style={
                  Object {
                    "fill": "var(--mds-color-theme-indicator-locked)",
                    "stroke": "none",
                  }
                }
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </div>
      </Presence>
    </div>
  </Avatar>
  <Avatar
    key="13"
    presence="onHold"
    presenceLabel="onHold"
    title="Cisco Webex"
  >
    <div
      aria-hidden="false"
      aria-label="onHold"
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      role="img"
    >
      <Initials
        className="md-avatar-wrapper-children"
        initials="CW"
        type="person"
      >
        <span
          aria-hidden="true"
          className="md-avatar-wrapper-children"
        >
          CW
        </span>
      </Initials>
      <Presence
        isCircularWrapper={false}
        presenceColor="var(--mds-color-theme-indicator-locked)"
        presenceIcon="pause"
        size={24}
      >
        <div
          className="md-avatar-presence-icon-wrapper"
          data-shape={false}
        >
          <Icon
            fillColor="var(--mds-color-theme-indicator-locked)"
            name="pause"
            scale={14}
            strokeColor="none"
            weight="filled"
          >
            <div
              aria-hidden="true"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-autoscale={false}
                data-scale={14}
                data-test="pause"
                height="100%"
                style={
                  Object {
                    "fill": "var(--mds-color-theme-indicator-locked)",
                    "stroke": "none",
                  }
                }
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </div>
      </Presence>
    </div>
  </Avatar>
</div>
`;

exports[`Avatar snapshot should match snapshot with size 1`] = `
<Avatar
  size={124}
  title="CW"
>
  <div
    aria-hidden="false"
    aria-label=""
    className="md-avatar-wrapper"
    data-color="default"
    data-size={124}
    role="img"
  >
    <Initials
      className="md-avatar-wrapper-children"
      initials="C"
      type="person"
    >
      <span
        aria-hidden="true"
        className="md-avatar-wrapper-children"
      >
        C
      </span>
    </Initials>
  </div>
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with src & title 1`] = `
<Avatar
  src="src"
  title="title"
>
  <div
    aria-hidden="false"
    aria-label=""
    className="md-avatar-wrapper"
    data-color="default"
    data-size={24}
    role="img"
  >
    <Initials
      className="md-avatar-wrapper-children"
      initials="t"
      type="person"
    >
      <span
        aria-hidden="true"
        className="md-avatar-wrapper-children"
      >
        t
      </span>
    </Initials>
    <img
      aria-hidden="true"
      className="md-avatar-wrapper-children md-avatar-image-hidden"
      onError={[Function]}
      onLoad={[Function]}
      src="src"
    />
  </div>
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with type 1`] = `
<Avatar
  title="Cisco Webex"
  type="space"
>
  <div
    aria-hidden="false"
    aria-label=""
    className="md-avatar-wrapper"
    data-color="default"
    data-size={24}
    role="img"
  >
    <Initials
      className="md-avatar-wrapper-children"
      initials="C"
      type="space"
    >
      <span
        aria-hidden="true"
        className="md-avatar-wrapper-children"
      >
        C
      </span>
    </Initials>
  </div>
</Avatar>
`;
